--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,20 +1,24 @@
-name: tests
-on: push
+name: Feature Branch
+
+on:
+  push:
+    branches-ignore:
+      - 'master'
+
+
 jobs:
-  run_tests:
-    runs-on: ubuntu-latest
+
+  test:
+    name: Unit Test
+    runs-on: ubuntu-18.04
+
     steps:
-      - name: Checkout the repository
-        uses: actions/checkout@v2
-      - name: Set up JDK 14
+      - uses: actions/checkout@v1
+      - name: Set up JDK 11
         uses: actions/setup-java@v1
         with:
-          java-version: 14
-      - name: Cache Maven packages
-        uses: actions/cache@v2
-        with:
-          path: ~/.m2
-          key: ${{ runner.os }}-m2-${{ hashFiles('**/pom.xml') }}
-          restore-keys: ${{ runner.os }}-m2
-      - name: Run tests with Maven
-        run: mvn -B test --file pom.xml
+          java-version: 1.8
+      - name: Maven Package
+        run: mvn -B clean package -DskipTests
+      - name: Maven Verify
+        run: mvn -B clean verify
